--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,30 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+django = "==3.1.1"
+pillow = "==7.2.0"
+wrapt = "==1.12.1"
+typed-ast = "==1.4.1"
+tree = "==0.2.4"
+asgiref = "==3.2.10"
+astroid = "==2.4.2"
+autopep8 = "==1.5.4"
+click = "==7.1.2"
+colorama = "==0.4.3"
+isort = "==5.5.4"
+lazy-object-proxy = "==1.4.3"
+mccabe = "==0.6.1"
+psycopg2 = "==2.8.6"
+psycopg2-binary = "==2.8.6"
+pycodestyle = "==2.6.0"
+pylint = "==2.6.0"
+pylint-django = "==2.3.0"
+pylint-plugin-utils = "==0.6"
+pytz = "==2020.1"
+six = "==1.15.0"
+sqlparse = "==0.3.1"
+svgwrite = "==1.4"
+toml = "==0.10.1"
 
 [requires]
 python_version = "3.7"
